[project]
name = "multi-agent-research"
version = "0.1.0"
description = "Simple multi-agent research system using Claude Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "lmnr[claude-agent-sdk]>=0.7.32",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_agent*"]
